--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <form action="" class="header__form js-form">
         <input type="text" id="Search" name="Search" placeholder="Example: Walter White" class="form__input js-input"/>
-        <button class="form__btn">Search</button>
+        <button class="form__btn js-btn">Search</button>
     </form>
 </header>
