--- a/src/html/partials/section-favorites.html
+++ b/src/html/partials/section-favorites.html
@@ -1,4 +1,5 @@
 <section class="section-favorites">
     <h2 class="section-favorites__title">Favorites<span class="section-favorites__title--icon">❤︎</span></h2>
-    <ul class="js-favorites"></ul>
+    <ul class="section-favorites__list js-favorites"></ul>
+    <button type="reset" class="btn-reset js-reset-btn">Reset</button>
 </section>
