--- a/src/scss/layout/_section-favorites.scss
+++ b/src/scss/layout/_section-favorites.scss
@@ -1,5 +1,8 @@
 .section-favorites{
 width: 30vw;
+display: flex;
+flex-direction: column;
+align-items: center;
 &__title{
 text-align: center;
 font-family: $font-main;
@@ -12,5 +15,28 @@ margin-bottom: 2em;
     padding-left: 0.3em; 
 }
 }
+&__list{
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 4px;
+    box-shadow: 0px 0px 8px 1px rgb(201, 182, 182) ; 
+    background-color: rgb(228, 216, 216); 
+}
 }
 
+.select-character{
+    background-color: $color-details; 
+ }
+
+ .btn-reset{
+    font-size: 12px;
+    margin-top: 3em;
+    padding: 1em;
+    background-color: $color-details;
+    color: $main-color;
+    border-style: hidden;
+    border-radius: 70%;
+    font-family: $font-main; 
+    font-weight: bold;
+    letter-spacing: 1.2px;
+ }
