--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
   height: 39.5vh;
   width: 100vw;
-  background-image: url(../images/img6.PNG);
+  background-image: url(../images/img7.JPG);
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
